refactor: 주요 lint 경고 수정